// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Breadcrumbs Default smoke-test 1`] = `
<div class="flex flex-col gap-8">
  <div class="flex flex-wrap gap-x-1 gap-y-0.5">
    <div class="flex items-center shrink-0 gap-x-1">
      <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-base py-3 px-6 font-normal border-none hover:!pb-px text-left !text-grey-6 hover:!text-primary-9 transition">
        Plan Vélo 2020 - 2024
      </button>
      <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-grey-8">
      </span>
    </div>
    <div class="flex items-center shrink-0 gap-x-1">
      <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-base py-3 px-6 font-normal border-none hover:!pb-px text-left !text-grey-6 hover:!text-primary-9 transition">
        0.0 Etudions un scénario de rupture pour atteindre la neutralité carbone en 2050
      </button>
      <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-grey-8">
      </span>
    </div>
    <div class="flex items-center shrink-0 gap-x-1">
      <button disabled
              class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed border-b border-t-0 border-x-0 !p-px font-medium !text-primary-3 bg-transparent border-primary-3 text-base py-3 px-6 font-normal border-none hover:!pb-px text-left !cursor-default !text-primary-9"
      >
        Etudions un scénario de rupture pour la période 2030-2050
      </button>
    </div>
  </div>
  <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5">
    Reset
  </button>
</div>
`;

exports[`design-system/Breadcrumbs Sizes smoke-test 1`] = `
<div class="flex flex-col gap-8">
  <div class="flex flex-wrap gap-x-1 gap-y-0.5">
    <div class="flex items-center shrink-0 gap-x-1">
      <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-xs py-2 px-5 font-normal border-none hover:!pb-px text-left !text-grey-6 hover:!text-primary-9 transition">
        Plan Vélo 2020 - 2024
      </button>
      <span class="ri-arrow-right-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-8">
      </span>
    </div>
    <div class="flex items-center shrink-0 gap-x-1">
      <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-xs py-2 px-5 font-normal border-none hover:!pb-px text-left !text-grey-6 hover:!text-primary-9 transition">
        0.0 Etudions un scénario de rupture pour atteindre la neutralité carbone en 2050
      </button>
      <span class="ri-arrow-right-s-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-8">
      </span>
    </div>
    <div class="flex items-center shrink-0 gap-x-1">
      <button disabled
              class="w-fit flex items-center border-solid group gap-1 cursor-not-allowed border-b border-t-0 border-x-0 !p-px font-medium !text-primary-3 bg-transparent border-primary-3 text-xs py-2 px-5 font-normal border-none hover:!pb-px text-left !cursor-default !text-primary-9"
      >
        Etudions un scénario de rupture pour la période 2030-2050
      </button>
    </div>
  </div>
  <div class="flex flex-wrap gap-x-1 gap-y-0.5">
    <div class="flex items-center shrink-0 gap-x-1">
      <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-sm py-2.5 px-6 font-normal border-none hover:!pb-px text-left !text-grey-6 hover:!text-primary-9 transition">
        Plan Vélo 2020 - 2024
      </button>
      <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-grey-8">
      </span>
    </div>
    <div class="flex items-center shrink-0 gap-x-1">
      <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-sm py-2.5 px-6 font-normal border-none hover:!pb-px text-left !text-grey-6 hover:!text-primary-9 transition">
        0.0 Etudions un scénario de rupture pour atteindre la neutralité carbone en 2050
      </button>
      <span class="ri-arrow-right-s-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] text-grey-8">
      </span>
    </div>
    <div class="flex items-center shrink-0 gap-x-1">
      <button disabled
              class="w-fit flex items-center border-solid group gap-1 cursor-not-allowed border-b border-t-0 border-x-0 !p-px font-medium !text-primary-3 bg-transparent border-primary-3 text-sm py-2.5 px-6 font-normal border-none hover:!pb-px text-left !cursor-default !text-primary-9"
      >
        Etudions un scénario de rupture pour la période 2030-2050
      </button>
    </div>
  </div>
  <div class="flex flex-wrap gap-x-1 gap-y-0.5">
    <div class="flex items-center shrink-0 gap-x-1">
      <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-base py-3 px-6 font-normal border-none hover:!pb-px text-left !text-grey-6 hover:!text-primary-9 transition">
        Plan Vélo 2020 - 2024
      </button>
      <span class="ri-arrow-right-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] text-grey-8">
      </span>
    </div>
    <div class="flex items-center shrink-0 gap-x-1">
      <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-base py-3 px-6 font-normal border-none hover:!pb-px text-left !text-grey-6 hover:!text-primary-9 transition">
        0.0 Etudions un scénario de rupture pour atteindre la neutralité carbone en 2050
      </button>
      <span class="ri-arrow-right-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] text-grey-8">
      </span>
    </div>
    <div class="flex items-center shrink-0 gap-x-1">
      <button disabled
              class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed border-b border-t-0 border-x-0 !p-px font-medium !text-primary-3 bg-transparent border-primary-3 text-base py-3 px-6 font-normal border-none hover:!pb-px text-left !cursor-default !text-primary-9"
      >
        Etudions un scénario de rupture pour la période 2030-2050
      </button>
    </div>
  </div>
  <div class="flex flex-wrap gap-x-1 gap-y-0.5">
    <div class="flex items-center shrink-0 gap-x-1">
      <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-2xl py-4 px-6 font-normal border-none hover:!pb-px text-left !text-grey-6 hover:!text-primary-9 transition">
        Plan Vélo 2020 - 2024
      </button>
      <span class="ri-arrow-right-s-line font-normal text-center h-8 w-8 text-[2rem] leading-[2rem] text-grey-8">
      </span>
    </div>
    <div class="flex items-center shrink-0 gap-x-1">
      <button class="w-fit flex items-center border-solid group gap-2 cursor-pointer border-b border-t-0 border-x-0 !p-px font-medium hover:border-b-2 hover:!pb-0 text-primary-8 !bg-transparent border-primary-7 text-2xl py-4 px-6 font-normal border-none hover:!pb-px text-left !text-grey-6 hover:!text-primary-9 transition">
        0.0 Etudions un scénario de rupture pour atteindre la neutralité carbone en 2050
      </button>
      <span class="ri-arrow-right-s-line font-normal text-center h-8 w-8 text-[2rem] leading-[2rem] text-grey-8">
      </span>
    </div>
    <div class="flex items-center shrink-0 gap-x-1">
      <button disabled
              class="w-fit flex items-center border-solid group gap-2 cursor-not-allowed border-b border-t-0 border-x-0 !p-px font-medium !text-primary-3 bg-transparent border-primary-3 text-2xl py-4 px-6 font-normal border-none hover:!pb-px text-left !cursor-default !text-primary-9"
      >
        Etudions un scénario de rupture pour la période 2030-2050
      </button>
    </div>
  </div>
  <button class="w-fit flex items-center border-solid group gap-1 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-xs py-2 px-5">
    Reset
  </button>
</div>
`;
